[project]
name = "marimo-agno-google-genai-cities"
version = "0.1.0"
description = "A simple CLI tool to generate a list of cities from Marimo, Agno and Google Genai."
authors = [
    {name = "Sergio Romano", email = "sergio.romano@gmail.com"},
]
keywords = ["marimo", "agno", "google-genai", "cities"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "agno>=1.3.0",
    "google-genai>=1.10.0",
    "marimo>=0.12.8",
]
